--- a/public/stylesheets/style-loggedin.sass
+++ b/public/stylesheets/style-loggedin.sass
@@ -131,3 +131,82 @@ table
     background-color: rgba(0,117,169,.5)
     border-top-left-radius: 3px
     border-top-right-radius: 3px
+.setup
+  main
+    width: 600px
+    margin-left: auto
+    margin-right: auto
+  img
+    position: relative
+    display: block
+    margin-left: auto
+    margin-right: auto
+    margin-bottom: 30px
+  h1
+    text-align: center
+    margin-bottom: 20px
+  h5
+    text-align: center
+  h3
+    text-align: center
+    margin-bottom: 20px
+  .wrap
+    border: solid 5px #880A6C
+    border-radius: 5px
+    margin-top: 30px
+    padding: 20px
+    form
+      display: block
+      margin: 0 auto
+      width: 80%
+      li
+        text-align: left
+      label.error
+        font-size: 10px
+        margin-bottom: 0px
+        margin-left: 17px
+        margin-top: 3px
+        display: block
+        position: absolute
+      .row
+        margin-top: 7px
+      input
+        margin-top: 0px
+        width: 100%
+        padding-left: 5px
+        border-radius: 5px
+        border: solid 1px $primary-color
+    h3
+      text-align: center
+    .highlight
+      color: #880A6C
+      font-weight: bold
+      margin-top: 20px
+    select
+      margin-left: auto
+      margin-right: auto
+      margin-bottom: 10px
+      display: block
+    #address2
+      margin-top: 5px
+    button
+      margin: 0 auto
+      display: block
+      border: solid 5px #880A6C
+      border-radius: 5px
+      background: #880A6C
+      margin-top: 20px
+      color: white
+    #companytype
+      font-size: 20px
+      margin-top: 20px
+      margin-bottom: 20px
+    #country
+      width: 100%!important
+    .errorsbox
+      border: solid 3px #880A6C
+      border-radius: 5px
+      text-align: center
+      margin: 0 auto
+      display: block
+      margin: 10px
