--- a/public/stylesheets/style-loggedin.css
+++ b/public/stylesheets/style-loggedin.css
@@ -143,4 +143,88 @@ table th {
   border-top-left-radius: 3px;
   border-top-right-radius: 3px; }
 
+.setup main {
+  width: 600px;
+  margin-left: auto;
+  margin-right: auto; }
+
+.setup img {
+  position: relative;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px; }
+
+.setup h1 {
+  text-align: center;
+  margin-bottom: 20px; }
+
+.setup h5 {
+  text-align: center; }
+
+.setup h3 {
+  text-align: center;
+  margin-bottom: 20px; }
+
+.setup .wrap {
+  border: solid 5px #880A6C;
+  border-radius: 5px;
+  margin-top: 30px;
+  padding: 20px; }
+  .setup .wrap form {
+    display: block;
+    margin: 0 auto;
+    width: 80%; }
+    .setup .wrap form li {
+      text-align: left; }
+    .setup .wrap form label.error {
+      font-size: 10px;
+      margin-bottom: 0px;
+      margin-left: 17px;
+      margin-top: 3px;
+      display: block;
+      position: absolute; }
+    .setup .wrap form .row {
+      margin-top: 7px; }
+    .setup .wrap form input {
+      margin-top: 0px;
+      width: 100%;
+      padding-left: 5px;
+      border-radius: 5px;
+      border: solid 1px black; }
+  .setup .wrap h3 {
+    text-align: center; }
+  .setup .wrap .highlight {
+    color: #880A6C;
+    font-weight: bold;
+    margin-top: 20px; }
+  .setup .wrap select {
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
+    display: block; }
+  .setup .wrap #address2 {
+    margin-top: 5px; }
+  .setup .wrap button {
+    margin: 0 auto;
+    display: block;
+    border: solid 5px #880A6C;
+    border-radius: 5px;
+    background: #880A6C;
+    margin-top: 20px;
+    color: white; }
+  .setup .wrap #companytype {
+    font-size: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px; }
+  .setup .wrap #country {
+    width: 100% !important; }
+  .setup .wrap .errorsbox {
+    border: solid 3px #880A6C;
+    border-radius: 5px;
+    text-align: center;
+    margin: 0 auto;
+    display: block;
+    margin: 10px; }
+
 /*# sourceMappingURL=style-loggedin.css.map */
