--- a/public/stylesheets/style-loggedin.css
+++ b/public/stylesheets/style-loggedin.css
@@ -176,14 +176,18 @@ table th {
     margin: 0 auto;
     width: 80%; }
     .setup .wrap form li {
-      text-align: left; }
+      text-align: left;
+      list-style-type: none; }
     .setup .wrap form label.error {
       font-size: 10px;
       margin-bottom: 0px;
       margin-left: 17px;
       margin-top: 3px;
       display: block;
-      position: absolute; }
+      position: relative !important;
+      margin: 0;
+      text-align: center;
+      color: #880A6C; }
     .setup .wrap form .row {
       margin-top: 7px; }
     .setup .wrap form input {
@@ -192,6 +196,8 @@ table th {
       padding-left: 5px;
       border-radius: 5px;
       border: solid 1px black; }
+    .setup .wrap form input.error {
+      border: solid 2px #880A6C; }
   .setup .wrap h3 {
     text-align: center; }
   .setup .wrap .highlight {
@@ -220,7 +226,6 @@ table th {
   .setup .wrap #country {
     width: 100% !important; }
   .setup .wrap .errorsbox {
-    border: solid 3px #880A6C;
     border-radius: 5px;
     text-align: center;
     margin: 0 auto;
