--- a/public/stylesheets/style-loggedin.sass
+++ b/public/stylesheets/style-loggedin.sass
@@ -161,7 +161,7 @@ table
       width: 80%
       li
         text-align: left
-        list-style-type: none;
+        list-style-type: none
       label.error
         font-size: 10px
         margin-bottom: 0px
