--- a/public/stylesheets/style-loggedin.css
+++ b/public/stylesheets/style-loggedin.css
@@ -209,6 +209,8 @@ table th {
     margin-right: auto;
     margin-bottom: 10px;
     display: block; }
+  .setup .wrap select.error {
+    border: solid 2px #880A6C; }
   .setup .wrap #address2 {
     margin-top: 5px; }
   .setup .wrap button {
