--- a/public/stylesheets/style-loggedin.sass
+++ b/public/stylesheets/style-loggedin.sass
@@ -193,6 +193,8 @@ table
       margin-right: auto
       margin-bottom: 10px
       display: block
+    select.error
+      border: solid 2px #880A6C
     #address2
       margin-top: 5px
     button
