--- a/public/stylesheets/style-loggedin.sass
+++ b/public/stylesheets/style-loggedin.sass
@@ -205,6 +205,9 @@ table
       background: #880A6C
       margin-top: 20px
       color: white
+    //button:hover
+    //  background: #880a88
+    //  border-color: #880a88
     #companytype
       font-size: 20px
       margin-top: 20px
