--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,6 +12,10 @@ body {
 a {
   color: inherit; }
 
+a:focus {
+  color: inherit;
+  text-decoration: none; }
+
 a:hover {
   color: inherit;
   text-decoration: none;
