--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -13,7 +13,9 @@ body
   flex-direction: column
 a
   color: inherit
-
+a:focus
+  color: inherit
+  text-decoration: none
 a:hover
   color: inherit
   text-decoration: none
