--- a/src/views/console/setup.ejs
+++ b/src/views/console/setup.ejs
@@ -34,7 +34,7 @@
             <option selected disabled>Select your company type</option>
             <option value="1">Advertiser</option>
             <option value="2">Publisher</option>
-            <option value="3">Agency</option>
+            <!--<option value="3">Agency</option>-->
         </select>
         <div class="row"><div class="col-sm-4 left"><label for="companyname">Company Name:</label></div> <div class="col-sm-8"><input type="text" name="companyname" id="companyname"></div></div>
         <div class="row"><div class="col-sm-4 left"><label for="address1">Address:</label></div> <div class="col-sm-8"><input type="text" name="address1" id="address1"><br><input type="text" name="address2" id="address2"></div></div>
@@ -74,7 +74,15 @@
 
 
     $(document).ready(function () {
-
+        // From http://stackoverflow.com/questions/280759/jquery-validate-how-to-add-a-rule-for-regular-expression-validation
+        $.validator.addMethod(
+                "regex",
+                function(value, element, regexp) {
+                    var re = new RegExp(regexp);
+                    return this.optional(element) || re.test(value);
+                },
+                "Please check your input."
+        );
 
         $('#company-registration').validate({
             rules: {
@@ -85,6 +93,7 @@
                     required: true
                 },
                 postcode: {
+                    regex: "^(([gG][iI][rR] {0,}0[aA]{2})|((([a-pr-uwyzA-PR-UWYZ][a-hk-yA-HK-Y]?[0-9][0-9]?)|(([a-pr-uwyzA-PR-UWYZ][0-9][a-hjkstuwA-HJKSTUW])|([a-pr-uwyzA-PR-UWYZ][a-hk-yA-HK-Y][0-9][abehmnprv-yABEHMNPRV-Y]))) {0,}[0-9][abd-hjlnp-uw-zABD-HJLNP-UW-Z]{2}))$",
                     required: true
                 },
                 city: {
@@ -98,12 +107,12 @@
                 }
             },
             messages: {
-                companytype: "Please select what kind of company you wish to register",
+                companytype: "Please select what kind of company you wish to register.",
                 companyname: "Please enter your company name.",
                 address1: "Please enter your company address.",
-                postcode: "What is your postcode?",
+                postcode: "Please enter a valid UK postcode.",
                 city: "Where's your company based?",
-                country: "Please select a country"
+                country: "Please select a country."
             },
 
 
