--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -21,6 +21,10 @@ a:hover
   text-decoration: none
   padding-bottom: 2px
   border-bottom: 2px solid
+input:active
+  outline: none!important
+input:focus
+  outline: none!important
 img
   user-drag: none
   user-select: none
