--- a/public/stylesheets/style-loggedin.css
+++ b/public/stylesheets/style-loggedin.css
@@ -3,7 +3,7 @@
   src: url("fonts/Asap-Regular.otf") format("opentype"); }
 
 body {
-  background-color: #E6FFF9;
+  background-color: #E9EBEE;
   color: black;
   font-family: FontAwesome, Helvetica, sans-serif;
   display: flex;
@@ -11,12 +11,21 @@ body {
 
 a {
   color: inherit; }
+  a .selected {
+    padding-bottom: 2px;
+    border-bottom: 2px solid; }
 
 a:hover {
   color: inherit;
   text-decoration: none;
   padding-bottom: 2px;
   border-bottom: 2px solid; }
+
+input:active {
+  outline: none !important; }
+
+input:focus {
+  outline: none !important; }
 
 img {
   user-drag: none;
@@ -68,8 +77,7 @@ nav {
 main {
   margin-top: 30px;
   padding-top: 30px;
-  padding-bottom: 30px;
-  background-color: rgba(255, 255, 255, 0.2); }
+  padding-bottom: 30px; }
 
 .home {
   align-items: center; }
@@ -134,14 +142,37 @@ video {
   position: relative;
   height: 100%; }
 
-table td {
-  padding: 5px; }
+table {
+  border: 1px solid #880A6C;
+  border-radius: 5px;
+  border-collapse: separate; }
+  table td {
+    padding-left: 15px; }
+  table th {
+    padding: 8px;
+    font-size: 20px;
+    background: #880A6C;
+    color: white; }
 
-table th {
-  padding: 5px;
-  background-color: rgba(0, 117, 169, 0.5);
-  border-top-left-radius: 3px;
-  border-top-right-radius: 3px; }
+button:focus {
+  outline: none !important; }
+
+button.add-campaign, .modal-body .btn {
+  border: 2px solid #880A6C;
+  text-align: center;
+  display: block;
+  background: transparent;
+  border-radius: 5px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  padding: 10px; }
+
+button:hover.add-campaign, .modal-body .btn:hover {
+  color: white;
+  background: #880A6C; }
+
+button:focus.add-campaign, .modal-body .btn:focus {
+  outline: none !important; }
 
 .setup main {
   width: 600px;
@@ -233,5 +264,36 @@ table th {
     margin: 0 auto;
     display: block;
     margin: 10px; }
+
+.modal-body {
+  background-color: #E9EBEE;
+  border-radius: 5px; }
+  .modal-body input {
+    border: 0px;
+    border-bottom: 2px solid #880A6C;
+    width: 400px;
+    font-size: 20px;
+    margin-bottom: 20px;
+    padding-left: 5px;
+    margin-top: 20px;
+    background: transparent;
+    color: #880A6C; }
+  .modal-body .btn {
+    width: 200px; }
+  .modal-body .fileinput-filename {
+    font-size: 12px; }
+  .modal-body .btn.btn-default.btn-file {
+    margin: 0px;
+    margin-top: 20px; }
+
+.modal-footer {
+  background-color: #880A6C; }
+  .modal-footer .btn {
+    border: solid 2px white;
+    color: white;
+    background: transparent; }
+
+.modal-box {
+  border-radius: 5px; }
 
 /*# sourceMappingURL=style-loggedin.css.map */
