--- a/public/stylesheets/style-loggedin.sass
+++ b/public/stylesheets/style-loggedin.sass
@@ -1,23 +1,31 @@
 $primary-color: black
 $logo-color: #E6FFF9
 $primary-font: FontAwesome, Helvetica, sans-serif
+$first-gradient: #880A6C
 
 @font-face
   font-family: 'FontAwesome'
   src: url('fonts/Asap-Regular.otf') format('opentype')
 body
-  background-color:  $logo-color
+  background-color:  #E9EBEE
   color: $primary-color
   font-family: $primary-font
   display: flex
   flex-direction: column
 a
   color: inherit
+  .selected
+    padding-bottom: 2px
+    border-bottom: 2px solid
 a:hover
   color: inherit
   text-decoration: none
   padding-bottom: 2px
   border-bottom: 2px solid
+input:active
+  outline: none!important
+input:focus
+  outline: none!important
 img
   user-drag: none
   user-select: none
@@ -66,7 +74,6 @@ main
   margin-top: 30px
   padding-top: 30px
   padding-bottom: 30px
-  background-color: rgba(255,255,255,0.2)
 .home
   align-items: center
   img
@@ -123,14 +130,32 @@ video
   position: relative
   height: 100%
 table
-
+  border: 1px solid $first-gradient
+  border-radius: 5px
+  border-collapse: separate
   td
-    padding: 5px
+    padding-left: 15px
   th
-    padding: 5px
-    background-color: rgba(0,117,169,.5)
-    border-top-left-radius: 3px
-    border-top-right-radius: 3px
+    padding: 8px
+    font-size: 20px
+    background: $first-gradient
+    color: white
+button:focus
+  outline: none!important
+button.add-campaign
+  border: 2px solid $first-gradient
+  text-align: center
+  display: block
+  background: transparent
+  border-radius: 5px
+  margin-top: 10px
+  margin-bottom: 20px
+  padding: 10px
+button:hover.add-campaign
+  color: white
+  background: $first-gradient
+button:focus.add-campaign
+  outline: none!important
 .setup
   main
     width: 600px
@@ -205,9 +230,6 @@ table
       background: #880A6C
       margin-top: 20px
       color: white
-    //button:hover
-    //  background: #880a88
-    //  border-color: #880a88
     #companytype
       font-size: 20px
       margin-top: 20px
@@ -220,3 +242,37 @@ table
       margin: 0 auto
       display: block
       margin: 10px
+
+.modal-body
+  background-color: #E9EBEE
+  border-radius: 5px
+  input
+    border: 0px
+    border-bottom: 2px solid $first-gradient
+    width: 400px
+    font-size: 20px
+    margin-bottom: 20px
+    padding-left: 5px
+    margin-top: 20px
+    background: transparent
+    color: $first-gradient
+  .btn
+    @extend button.add-campaign
+    width: 200px
+  .fileinput-filename
+    font-size: 12px
+  .btn.btn-default.btn-file
+    margin: 0px
+    margin-top: 20px
+.modal-footer
+  background-color: $first-gradient
+
+
+
+  .btn
+    border: solid 2px white
+    color: white
+    background: transparent
+
+
+
