--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -22,6 +22,12 @@ a:hover {
   padding-bottom: 2px;
   border-bottom: 2px solid; }
 
+input:active {
+  outline: none !important; }
+
+input:focus {
+  outline: none !important; }
+
 img {
   user-drag: none;
   user-select: none;
