--- a/public/stylesheets/style-loggedin.sass
+++ b/public/stylesheets/style-loggedin.sass
@@ -135,6 +135,7 @@ table
   border-collapse: separate
   td
     padding-left: 15px
+    //border-bottom: 1px solid $first-gradient
   th
     padding: 8px
     font-size: 20px
@@ -249,13 +250,21 @@ button:focus.add-campaign
   input
     border: 0px
     border-bottom: 2px solid $first-gradient
-    width: 400px
+    display: block
     font-size: 20px
     margin-bottom: 20px
     padding-left: 5px
-    margin-top: 20px
+    margin-top: 10px
     background: transparent
     color: $first-gradient
+  input.campaign-title
+      width: 400px
+      margin-top: 30px
+      margin-left: auto
+      margin-right: auto
+      text-align: center
+      font-size: 30px
+
   .btn
     @extend button.add-campaign
     width: 200px
@@ -264,6 +273,9 @@ button:focus.add-campaign
   .btn.btn-default.btn-file
     margin: 0px
     margin-top: 20px
+  p
+    margin-top: 40px
+    margin-bottom: 40px
 .modal-footer
   background-color: $first-gradient
 
@@ -273,6 +285,8 @@ button:focus.add-campaign
     border: solid 2px white
     color: white
     background: transparent
-
+  .btn:active
+    background: transparent
+    border: solid 2px white
 
 
