--- a/src/views/console/campaigns.ejs
+++ b/src/views/console/campaigns.ejs
@@ -22,6 +22,7 @@
 <main>
     <div class="container">
         <button class="add-campaign" data-toggle="modal" data-target="#myModal">Add a new Campaign</button>
+
         <table style="width:100%">
             <tr>
                 <th width="20%">Image</th>
@@ -30,16 +31,15 @@
                 <th width="10%">Impressions</th>
                 <th width="10%">Delete</th>
             </tr>
-            <tr>
-                <td>Jill</td>
-                <td>Smith</td>
-                <td>50</td>
-            </tr>
-            <tr>
-                <td>Eve</td>
-                <td>Jackson</td>
-                <td>94</td>
-            </tr>
+            <% for(var i=0; i<locals.rows.length; i++) { %>
+                <tr>
+                    <td><img style="display:block; margin: 10px" width="100%"  src="<%= locals.rows[i].image %>"></td>
+                    <td><%= locals.rows[i].title %></td>
+                    <td>Stats here</td>
+                    <td><%= locals.rows[i].impressions %></td>
+                    <td>Delete Here</td>
+                <tr>
+            <% } %>
         </table>
     </div>
 </main>
@@ -49,30 +49,40 @@
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <div class="modal-body">
-                <form action="" method="post">
-                    <input class="campaign-title" id="title" name="title" type="text" placeholder="Enter a title for this campaign"><br>
+            <form action="" method="post" id="campaign-wizard">
+                <div class="modal-body">
+                    <input class="campaign-title" id="title" name="title" type="text" placeholder="Please enter a title"><br>
                     Now please select an image for your banners. <b>This needs to be squared.</b>
-                    <div class="fileinput fileinput-new" data-provides="fileinput">
-                        <span class="btn btn-default btn-file"><span class="fileinput-new">Select an image</span><span class="fileinput-exists">Change</span><input type="file" id="file-input"></span>
-                        <span class="fileinput-filename"></span>
-                        <a href="#" class="close fileinput-exists" data-dismiss="fileinput" style="float: none">&nbsp;</a>
+                    <div class="row selectpreview">
+                        <div class="col-md-6 left">
+                            <div class="fileinput fileinput-new" data-provides="fileinput">
+                                <span class="btn btn-default btn-file"><span class="fileinput-new">Select an image</span><span class="fileinput-exists">Change</span><input type="file" id="fileinput" name="fileinput"></span>
+                                <span class="fileinput-filename"></span>
+                                <a href="#" class="close fileinput-exists" data-dismiss="fileinput" style="float: none">&nbsp;</a>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <!--Used for preview-->
+                            <input type="hidden" id="bannerurl" name="bannerurl">
+                            <img id="preview" src="">
+                        </div>
                     </div>
-                    <input type="hidden" id="avatar-url" name="banner-url" value="/images/default.png">
-                    <img id="preview" src="" height="50px">
+
+
 
                     <p>
-                        How many impressions do you want for this campaign? <input type="text" placeholder="e.g. 1000">
+                        How many impressions do you want for this campaign? <input type="text" placeholder="e.g. 1000" id="impressions" name="impressions">
                     </p>
                     <p>
-                        Enter here the fallback website: <input type="text" placeholder="e.g. http://example.com">
+                        Enter here the fallback website: <input type="text" id="fallback" name="fallback" placeholder="e.g. http://example.com">
                     </p>
-                </form>
-            </div>
-            <div class="modal-footer">
-                <!--<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>-->
-                <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
+                    <p class="errorsBox"></p>
+                </div>
+                <div class="modal-footer">
+                    <!--<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>-->
+                    <button class="btn btn-primary">Save changes</button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
@@ -93,14 +103,14 @@
 <script>
 
     $(document).ready(function () {
-//        from http://stackoverflow.com/questions/1260984/jquery-validate-less-than
-        $.validator.addMethod('lessThanEqual', function(value, element, param) {
-            return this.optional(element) || parseInt(value) <= parseInt($(param).val());
-        }, "The value {0} must be less than {1}");
-
-        $.validator.addMethod('moreThanEqual', function(value, element, param) {
-            return this.optional(element) || parseInt(value) >= parseInt($(param).val());
-        }, "The value {0} must be less than {1}");
+        // From http://stackoverflow.com/questions/1260984/jquery-validate-less-than
+//        $.validator.addMethod('lessThanEqual', function(value, element, param) {
+//            return this.optional(element) || parseInt(value) <= parseInt($(param).val());
+//        }, "The value {0} must be less than {1}");
+//
+//        $.validator.addMethod('moreThanEqual', function(value, element, param) {
+//            return this.optional(element) || parseInt(value) >= parseInt($(param).val());
+//        }, "The value {0} must be less than {1}");
         // From http://stackoverflow.com/questions/280759/jquery-validate-how-to-add-a-rule-for-regular-expression-validation
         $.validator.addMethod(
                 "regex",
@@ -111,30 +121,35 @@
                 "Please check your input."
         );
 
-        $('#company-registration').validate({
+        $('#campaign-wizard').validate({
             rules: {
                 title: {
                     required: true
                 },
-                image: {
+                fileinput: {
                     required: true
                 },
                 impressions: {
                     required: true,
-                    lessThanEqual: 100000,
-                    moreThanEqual: 1000
+//                    moreThanEqual: 10,
+//                    lessThanEqual: 5000
+                },
+                bannerurl: {
+                    required: true
                 },
                 fallback: {
-                    regex: "/^(http(s?):\/\/)?(www\.)+[a-zA-Z0-9\.\-\_]+(\.[a-zA-Z]{2,3})+(\/[a-zA-Z0-9\_\-\s\.\/\?\%\#\&\=]*)?$/",
                     required: true
                 }
             },
             messages: {
-                title: "Please type a title.",
-                image: "Please select an image.",
-                impressions: "Please select a number of impressions betwenn 1k and 100k.",
+                title: "Please enter a title.",
+                impressions: "Please enter how many impressions you want.",
+                fileinput: "Please upload an image",
                 fallback: "Please enter a valid fallback website."
-            }
+            },
+            errorLabelContainer: ".errorsBox",
+            wrapper: "li",
+            validClass: null
         })
     });
 
@@ -144,25 +159,25 @@
     // Uploading banner image: https://devcenter.heroku.com/articles/s3-upload-node
 
     (() => {
-        document.getElementById("file-input").onchange = () => {
-            const files = document.getElementById('file-input').files;
+        document.getElementById("fileinput").onchange = () => {
+            const files = document.getElementById('fileinput').files;
             const file = files[0];
             if(file == null){
                 return alert('No file selected.');
             } else {
                 getSignedRequest(file);
-
             }
         };
     })();
 
     function getSignedRequest(file){
         const xhr = new XMLHttpRequest();
-        xhr.open('GET', `/sign-s3?file-name=${file.name}&file-type=${file.type}`);
+        xhr.open('GET', `./sign-s3?file-name=${file.name}&file-type=${file.type}`);
         xhr.onreadystatechange = () => {
             if(xhr.readyState === 4){
                 if(xhr.status === 200){
                     const response = JSON.parse(xhr.responseText);
+                    console.log(response);
                     uploadFile(file, response.signedRequest, response.url);
                 }
                 else{
@@ -180,7 +195,7 @@
             if(xhr.readyState === 4){
                 if(xhr.status === 200){
                     document.getElementById('preview').src = url;
-                    document.getElementById('avatar-url').value = url;
+                    document.getElementById('bannerurl').value = url;
                 }
                 else{
                     alert('Could not upload file.');
