--- a/public/stylesheets/style-loggedin.css
+++ b/public/stylesheets/style-loggedin.css
@@ -143,16 +143,30 @@ video {
   height: 100%; }
 
 table {
-  border: 1px solid #880A6C;
-  border-radius: 5px;
-  border-collapse: separate; }
+  border-spacing: 0; }
+  table tr:first-child th:first-child {
+    border-top-left-radius: 5px; }
+  table tr:first-child th:last-child {
+    border-top-right-radius: 5px; }
+  table tr td {
+    border-right: 1px solid #880A6C;
+    border-bottom: 1px solid #880A6C; }
+  table tr:last-child td {
+    border-bottom: 2px solid #880A6C !important; }
+  table tr td:first-child {
+    border-left: 2px solid #880A6C; }
+  table tr td:last-child {
+    border-right: 2px solid #880A6C; }
+  table td:last-child td:first-child {
+    border-bottom-left-radius: 5px; }
   table td {
     padding-left: 15px; }
   table th {
     padding: 8px;
     font-size: 20px;
     background: #880A6C;
-    color: white; }
+    color: white;
+    border: 2px solid #880A6C; }
 
 button:focus {
   outline: none !important; }
@@ -348,5 +362,34 @@ button:focus.add-campaign, .modal-body .btn:focus {
     background: white;
     border: solid 2px #880A6C;
     color: #880A6C; }
+
+.no-content {
+  color: grey;
+  margin-top: 80px;
+  margin-bottom: 80px;
+  text-align: center;
+  font-size: 4em; }
+
+#agentmodal .row {
+  position: relative;
+  height: 150px;
+  margin-top: 30px; }
+
+#agentmodal .circle {
+  border: 1px solid #880A6C;
+  border-radius: 50%;
+  background: #880A6C;
+  height: 100px;
+  width: 100px;
+  text-align: center;
+  font-size: 70px;
+  color: white;
+  margin: 30px;
+  position: relative;
+  margin-top: auto;
+  margin-bottom: auto; }
+
+#agentmodal input {
+  width: 300px; }
 
 /*# sourceMappingURL=style-loggedin.css.map */
