--- a/public/stylesheets/style-loggedin.sass
+++ b/public/stylesheets/style-loggedin.sass
@@ -131,17 +131,36 @@ video
   position: relative
   height: 100%
 table
-  border: 1px solid $first-gradient
-  border-radius: 5px
-  border-collapse: separate
+  //border-radius: 5px
+  //border-collapse: separate
+  //border-radius: 5px
+  border-spacing: 0
+  tr:first-child th:first-child
+    border-top-left-radius: 5px
+  tr:first-child th:last-child
+    border-top-right-radius: 5px
+
+  tr td
+    border-right: 1px solid $first-gradient
+    border-bottom: 1px solid $first-gradient
+  tr:last-child td
+    border-bottom: 2px solid $first-gradient!important
+  tr td:first-child
+    border-left: 2px solid $first-gradient
+  tr td:last-child
+    border-right: 2px solid $first-gradient
+  td:last-child td:first-child
+    border-bottom-left-radius: 5px
+
   td
     padding-left: 15px
-    //border-bottom: 1px solid $first-gradient
   th
     padding: 8px
     font-size: 20px
     background: $first-gradient
     color: white
+    border: 2px solid $first-gradient
+
 button:focus
   outline: none!important
 button.add-campaign
@@ -325,4 +344,30 @@ button:focus.add-campaign
     background: white
     border: solid 2px $first-gradient
     color: $first-gradient
-
+.no-content
+  color: grey
+  margin-top: 80px
+  margin-bottom: 80px
+  text-align: center
+  font-size: 4em
+#agentmodal
+  .row
+    position: relative
+    height: 150px
+    margin-top: 30px
+  .circle
+    border: 1px solid $first-gradient
+    border-radius: 50%
+    background: $first-gradient
+    height: 100px
+    width: 100px
+    text-align: center
+    font-size: 70px
+    color: white
+    margin: 30px
+    position: relative
+    margin-top: auto
+    margin-bottom: auto
+  input
+    width: 300px
+    
